# bb-market-rs

./: Cargo.toml  README.md  build.rs  config.toml  usdt_symbols.txt
PumpDetector/: pump_signals.txt
anomaly/: ethfiusdt_20260319_112452.txt  saharausdt_20260319_093121.txt
archive/legacy-src/: README.md
archive/legacy-src/src/: postgres.rs
archive/legacy-src/src/analysis/: adaptive_threshold.rs  analysis.rs  pump_detector.rs  signal_resolver.rs  新增指标.md
archive/legacy-src/src/market/: adaptive_threshold.rs  anomaly_event.rs  big_trade.rs  orderbook.rs  orderbook_tick.rs  panel.rs  trade.rs
archive/legacy-src/src/symbols/: mod.rs  sync_symbols.rs
archive/legacy-src/src/web/: auth.rs  cache.rs  server.rs  state.rs
logs/: dashboard-cache.json
logs/auth/: users.json
logs/spot/: balances.jsonl  orders.jsonl  trades.jsonl
logs/spot/archive/2026-03-20/: events.jsonl
reports/: ethfiusdt_20260319_112452.txt  global_anomalies.txt  saharausdt_20260319_093121.txt
sql/postgres/: auth_identity.sql  market_adaptive_threshold.sql  market_anomaly_event.sql  market_big_trade.sql  market_order_book.sql  market_orderbook_tick.sql  market_recent_trade.sql  market_signal_factor_detail.sql  market_signal_performance.sql  market_symbol_panel.sql  market_symbol_registry.sql
src/: config.rs  main.rs  postgres.rs
src/analysis/: adaptive_threshold.rs  algorithms.rs  analysis.rs  mod.rs  multi_monitor.rs  orderbook_anomaly.rs  pump_detector.rs  signal_resolver.rs
src/analysis/algorithms/: alpha.rs  intelligence.rs  market_maker.rs  mod.rs  pump.rs  spoofing.rs  whale.rs
src/analysis/multi_monitor/: manager.rs  signal.rs  symbol.rs  websocket.rs
src/analysis/orderbook_anomaly/: detector.rs  mod.rs  types.rs
src/auth/application/: mod.rs  service.rs
src/auth/domain/: mod.rs
src/auth/infrastructure/: postgres.rs
src/bootstrap/: main.rs
src/client/: websocket.rs
src/codec/: binance_msg.rs  mod.rs
src/engine/: mod.rs
src/execution/application/: spot.rs
src/execution/domain/: matching.rs
src/execution/infrastructure/: mod.rs
src/identity/application/: dto.rs  mod.rs  service.rs
src/identity/domain/: model.rs  repository.rs
src/identity/infrastructure/: postgres.rs
src/identity/interfaces/: mod.rs
src/instrument_catalog/application/: mod.rs  ports.rs  service.rs
src/instrument_catalog/domain/: mod.rs  model.rs
src/instrument_catalog/infrastructure/: mod.rs  sync_symbols.rs
src/market/: anomaly_event.rs  mod.rs  orderbook.rs  orderbook_tick.rs  panel.rs  trade.rs
src/market_data/application/: dto.rs  mod.rs  ports.rs  runtime.rs
src/market_data/domain/: mod.rs  order_book.rs  stream.rs
src/market_data/infrastructure/: binance.rs
src/shared/: config.rs  postgres.rs
src/shell/: shell.text
src/signal_intelligence/application/: mod.rs  ports.rs  signal_resolver.rs
src/signal_intelligence/domain/: adaptive_threshold.rs  algorithms.rs  market_analysis.rs  mod.rs  pump_detector.rs  strategy_engine.rs
src/store/: l2_book.rs  mod.rs
src/symbols/: sync_symbols.rs
src/terminal/: mod.rs
src/terminal/application/: bridge.rs  cache.rs  dto.rs  http_access.rs  http_dto.rs  mod.rs  ports.rs  price_source.rs  projection.rs  query.rs  symbol_view.rs  ws.rs
src/terminal/interfaces/: mod.rs
src/web/: auth.rs  bridge.rs  cache.rs  mod.rs  server.rs  spot.rs  state.rs
src/web/bridge/: feed.rs  labels.rs  mod.rs  snapshot.rs
src/web/dashboard/: index.html
src/web/spot/: core.rs  helpers.rs  mod.rs  service.rs  storage.rs  tests.rs  types.rs
文档/: 量化策略1.0.0.md  项目架构说明.md
(+92 files in other folders)
