[package]
name = "bb-market-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
# 建议换用 rustls-tls-native-roots 避免 native-tls 的链接问题
#tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rust_decimal = "1.40.0"
anyhow = "1.0.102"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
colored = "2.0"
const_format = "0.2"

rust_decimal_macros = "1.21"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = "0.4" 


rustls = { version = "0.23", features = ["ring"] }