[package]
name = "bb-market-rs"
version = "2.2.0"
edition = "2021"
description = "BB-Market 实时监控系统 + Web Dashboard"

[[bin]]
name = "bb-market"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
# 建议换用 rustls-tls-native-roots 避免 native-tls 的链接问题
#tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rust_decimal = "1.40.0"
anyhow = "1.0.102"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
colored = "2.0"
const_format = "0.2"

rust_decimal_macros = "1.21"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = "0.4"


rustls = { version = "0.23", features = ["ring"] }


# 新增依赖
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5.0"


# ── 新增：Web Dashboard ──────────────────────────────────────────
axum = { version = "0.7", features = ["ws"] }   # HTTP + WebSocket 服务器
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
